--- a/leituraSondagem.ipynb
+++ b/leituraSondagem.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -752,9 +752,182 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>OBRA:</td>\n",
+       "      <td>TARUMÃ CONDOMÍNIO - 02.</td>\n",
+       "      <td>REVESTIMENTO</td>\n",
+       "      <td>O</td>\n",
+       "      <td>2.1/2 \"</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>LOCAL:</td>\n",
+       "      <td>AV. do Turismo, no 14012, lote 54A - Tarumã - ...</td>\n",
+       "      <td>AMOSTRADOR:</td>\n",
+       "      <td>O interno 1.3/8 \"</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>CONTRATANTE:</td>\n",
+       "      <td>MANAUARA XII EMPREENDIMENTO IMOBILIÁRIO SPE LTDA.</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>O externo</td>\n",
+       "      <td>2 \"</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>DATA:</td>\n",
+       "      <td>05.11.2020</td>\n",
+       "      <td>RN: 50.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>FURO No</td>\n",
+       "      <td>SP-09</td>\n",
+       "      <td>COTA: 31.150</td>\n",
+       "      <td>FOLHA No</td>\n",
+       "      <td>01</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              1                                                  2  \\\n",
+       "0         OBRA:                            TARUMÃ CONDOMÍNIO - 02.   \n",
+       "1        LOCAL:  AV. do Turismo, no 14012, lote 54A - Tarumã - ...   \n",
+       "2  CONTRATANTE:  MANAUARA XII EMPREENDIMENTO IMOBILIÁRIO SPE LTDA.   \n",
+       "3         DATA:                                         05.11.2020   \n",
+       "4       FURO No                                              SP-09   \n",
+       "\n",
+       "              3                  4        5  \n",
+       "0  REVESTIMENTO                  O  2.1/2 \"  \n",
+       "1   AMOSTRADOR:  O interno 1.3/8 \"      NaN  \n",
+       "2           NaN          O externo      2 \"  \n",
+       "3     RN: 50.00                NaN      NaN  \n",
+       "4  COTA: 31.150           FOLHA No       01  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SP-09\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# cabecalho com colunas numerotadas\n",
+    "cabecalho = tabela.loc[0:4]\n",
+    "cabecalho.columns = [1, 2, 3, 'D', '4', '5']\n",
+    "del cabecalho['D']\n",
+    "display(cabecalho)\n",
+    "# indicio do No do furo\n",
+    "indicio_furoNo_folha = cabecalho[cabecalho[1] ==  'FURO No'].index[0]\n",
+    "furoNo = cabecalho.iat[indicio_furoNo_folha,1]\n",
+    "folhaNo = cabecalho.iat[indicio_furoNo_folha,4]\n",
+    "print(furoNo)\n",
+    "print(int(folhaNo))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "perfil_estratigrafico = tabela.drop(tabela.index[0:6])\n",
+    "perfil_estratigrafico.columns = ['col1', 'col2', 'col3', 'col4', 'col5', 'col6']\n",
+    "#display(perfil_estratigrafico)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "perfil_estratigrafico = perfil_estratigrafico[perfil_estratigrafico['col2'].notna()]\n",
+    "#display(perfil_estratigrafico)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "perfil_estratigrafico[['col7', 'col8']] = perfil_estratigrafico['col2'].str.rsplit(\" \", 1, expand=True)\n",
+    "perfil_estratigrafico = perfil_estratigrafico[perfil_estratigrafico['col8'].notna()]\n",
+    "#display(perfil_estratigrafico) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14     5\n",
+       "16     4\n",
+       "17     5\n",
+       "20     2\n",
+       "25     2\n",
+       "31     3\n",
+       "32     2\n",
+       "35     3\n",
+       "36     5\n",
+       "37     6\n",
+       "39    24\n",
+       "42    20\n",
+       "Name: col8, dtype: int8"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "data": {
       "text/html": [
@@ -781,103 +954,163 @@
        "      <th>col3</th>\n",
        "      <th>col4</th>\n",
        "      <th>col5</th>\n",
+       "      <th>col6</th>\n",
+       "      <th>col7</th>\n",
+       "      <th>SP-09</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>FURO No</td>\n",
-       "      <td>SP-09</td>\n",
-       "      <td>COTA: 31.150</td>\n",
-       "      <td>FOLHA No</td>\n",
-       "      <td>01</td>\n",
+       "      <th>16</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1,60 2 4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1,60 2</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>02</td>\n",
+       "      <td>4 5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>03</td>\n",
+       "      <td>2 2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>07</td>\n",
+       "      <td>2 2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>11</td>\n",
+       "      <td>2 3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>12</td>\n",
+       "      <td>2 2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>14</td>\n",
+       "      <td>2 3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>15</td>\n",
+       "      <td>3 5</td>\n",
+       "      <td>Areia média argilosa rosa fofa a pouco compacta</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>16</td>\n",
+       "      <td>5 6</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>17</td>\n",
+       "      <td>19 24</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>19</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>18</td>\n",
+       "      <td>18,00 16 20</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>18,00 16</td>\n",
+       "      <td>20</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      col1   col2          col3      col4 col5\n",
-       "4  FURO No  SP-09  COTA: 31.150  FOLHA No   01"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Empty DataFrame\n",
-      "Columns: [col1, col2, col3, col4, col5]\n",
-      "Index: []\n"
-     ]
-    }
-   ],
-   "source": [
-    "cabecalho = tabela.loc[0:4]\n",
-    "cabecalho.columns = ['col1', 'col2', 'col3', 'D', 'col4', 'col5']\n",
-    "del cabecalho['D']\n",
-    "furoNo = cabecalho.iloc[4:1]\n",
-    "display(cabecalho)\n",
-    "print(furoNo)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "perfil_estratigrafico = tabela.drop(tabela.index[0:6])\n",
-    "perfil_estratigrafico.columns = ['col1', 'col2', 'col3', 'col4', 'col5', 'col6']\n",
-    "#display(perfil_estratigrafico)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "perfil_estratigrafico = perfil_estratigrafico[perfil_estratigrafico['col2'].notna()]\n",
-    "#display(perfil_estratigrafico)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "perfil_estratigrafico[['col7', 'col8']] = perfil_estratigrafico['col2'].str.rsplit(\" \", 1, expand=True)\n",
-    "perfil_estratigrafico = perfil_estratigrafico[perfil_estratigrafico['col8'].notna()]\n",
-    "#display(perfil_estratigrafico) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "11     5.0\n",
-       "12     5.0\n",
-       "14     5.0\n",
-       "16     4.0\n",
-       "17     5.0\n",
-       "20     2.0\n",
-       "25     2.0\n",
-       "31     3.0\n",
-       "32     2.0\n",
-       "35     3.0\n",
-       "36     5.0\n",
-       "37     6.0\n",
-       "39    24.0\n",
-       "42    20.0\n",
-       "Name: col8, dtype: float64"
+       "   col1         col2                                             col3 col4  \\\n",
+       "16  NaN     1,60 2 4                                              NaN  NaN   \n",
+       "17   02          4 5                                              NaN  NaN   \n",
+       "20   03          2 2                                              NaN  NaN   \n",
+       "25   07          2 2                                              NaN  NaN   \n",
+       "31   11          2 3                                              NaN  NaN   \n",
+       "32   12          2 2                                              NaN  NaN   \n",
+       "35   14          2 3                                              NaN  NaN   \n",
+       "36   15          3 5  Areia média argilosa rosa fofa a pouco compacta  NaN   \n",
+       "37   16          5 6                                              NaN  NaN   \n",
+       "39   17        19 24                                              NaN  NaN   \n",
+       "42   18  18,00 16 20                                              NaN  NaN   \n",
+       "\n",
+       "   col5 col6      col7  SP-09  \n",
+       "16  NaN  NaN    1,60 2      4  \n",
+       "17  NaN  NaN         4      5  \n",
+       "20  NaN  NaN         2      2  \n",
+       "25  NaN  NaN         2      2  \n",
+       "31  NaN  NaN         2      3  \n",
+       "32  NaN  NaN         2      2  \n",
+       "35  NaN  NaN         2      3  \n",
+       "36  NaN  NaN         3      5  \n",
+       "37  NaN  NaN         5      6  \n",
+       "39  NaN  NaN        19     24  \n",
+       "42  NaN  NaN  18,00 16     20  "
       ]
      },
      "metadata": {},
@@ -887,8 +1120,12 @@
    "source": [
     "perfil_estratigrafico['col8']= pd.to_numeric(perfil_estratigrafico['col8'], errors='coerce')\n",
     "perfil_estratigrafico = perfil_estratigrafico[perfil_estratigrafico['col8'].notna()]\n",
-    "\n",
-    "display(perfil_estratigrafico['col8'])"
+    "perfil_estratigrafico['col8']= pd.to_numeric(perfil_estratigrafico['col8'], downcast='integer')\n",
+    "display(perfil_estratigrafico['col8'])\n",
+    "#perfil_estratigrafico.reset_index(drop=True)\n",
+    "perfil_estratigrafico = perfil_estratigrafico.tail(perfil_estratigrafico.shape[0] -1)\n",
+    "perfil_estratigrafico.rename(columns = {'col8': furoNo}, inplace = True)\n",
+    "display(perfil_estratigrafico)"
    ]
   }
  ],
